# CodexA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  build.py  codexa.spec  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wheels.yml  ci.yml  deploy-docs.yml
Formula/: codexa.rb
codexa-core/: Cargo.toml  pyproject.toml
codexa-core/src/: ann.rs  ast_chunk.rs  bm25.rs  chunk.rs  embed.rs  hnsw.rs  hybrid.rs  lib.rs  scan.rs  tantivy_search.rs
docs/: AI_TOOL_PROTOCOL.md  AI_WORKFLOWS.md  BRIDGE.md  CI.md  CLI.md  CodexA-vs-ck.md  PLUGINS.md  QUALITY_METRICS.md  TOOLS.md  WEB.md  WORKFLOW_INTELLIGENCE.md  api.md  architecture.md  index.md  installation.md  modules.md  quickstart.md  roadmap.md
docs/.vitepress/: config.mts
docs/features/: ai-tools.md  evolution-engine.md  mcp-integration.md  plugin-system.md  quality-analysis.md  semantic-search.md  web-interface.md  workflow-intelligence.md
docs/guide/: ai-agent-setup.md  configuration.md  contributing.md  installation.md  introduction.md  quickstart.md  roadmap.md  upgrade.md
docs/public/: CNAME
docs/reference/: api.md  architecture.md  bridge.md  cli.md  modules.md
editors/: README.md
editors/eclipse/: README.md  plugin.xml
editors/emacs/: codexa.el
editors/helix/: README.md
editors/jetbrains/: build.gradle.kts
editors/jetbrains/src/main/kotlin/com/codexa/intellij/: CodexaToolWindowFactory.kt
editors/neovim/lua/codexa/: init.lua
editors/sublime/: codexa.py
editors/vim/plugin/: codexa.vim
editors/zed/: extension.json
examples/: README.md
packaging/chocolatey/: codexa.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/scoop/: codexa.json
scripts/: build_binary.py
semantic_code_intelligence/: __init__.py  rust_backend.py  version.py
semantic_code_intelligence/analysis/: __init__.py  ai_features.py  codegen.py  cross_language.py  semantic_diff.py
semantic_code_intelligence/bridge/: __init__.py  context_provider.py  protocol.py  server.py  vscode.py
semantic_code_intelligence/ci/: __init__.py  hooks.py  hotspots.py  impact.py  metrics.py  pr.py  quality.py  templates.py  trace.py
semantic_code_intelligence/cli/: main.py  router.py
semantic_code_intelligence/cli/commands/: ask_cmd.py  benchmark_cmd.py  chat_cmd.py  ci_gen_cmd.py  context_cmd.py  cross_refactor_cmd.py  deps_cmd.py  docs_cmd.py  doctor_cmd.py  evolve_cmd.py  explain_cmd.py  gate_cmd.py  grep_cmd.py  hotspots_cmd.py  impact_cmd.py  index_cmd.py  init_cmd.py  investigate_cmd.py  languages_cmd.py  lsp_cmd.py  mcp_cmd.py  metrics_cmd.py  models_cmd.py  plugin_cmd.py  pr_summary_cmd.py  quality_cmd.py  refactor_cmd.py  review_cmd.py  search_cmd.py  serve_cmd.py  suggest_cmd.py  summary_cmd.py  tool_cmd.py  trace_cmd.py  tui_cmd.py  viz_cmd.py  watch_cmd.py  web_cmd.py  workspace_cmd.py
semantic_code_intelligence/config/: settings.py
semantic_code_intelligence/context/: __init__.py  engine.py  memory.py
semantic_code_intelligence/daemon/: __init__.py  watcher.py
semantic_code_intelligence/docs/: __init__.py
semantic_code_intelligence/embeddings/: enhanced.py  generator.py  model_registry.py
semantic_code_intelligence/evolution/: __init__.py  budget_guard.py  commit_manager.py  context_builder.py  engine.py  patch_generator.py  task_selector.py  test_runner.py
semantic_code_intelligence/indexing/: chunker.py  parallel.py  scanner.py  semantic_chunker.py
semantic_code_intelligence/llm/: __init__.py  cache.py  cached_provider.py  conversation.py  cross_refactor.py  investigation.py  mock_provider.py  ollama_provider.py  openai_provider.py  provider.py  rag.py  rate_limiter.py  reasoning.py  safety.py  streaming.py
semantic_code_intelligence/lsp/: __init__.py
semantic_code_intelligence/mcp/: __init__.py  claude_config.py
semantic_code_intelligence/parsing/: __init__.py  parser.py
semantic_code_intelligence/plugins/: __init__.py
semantic_code_intelligence/plugins/examples/: __init__.py  code_quality.py  search_annotator.py
semantic_code_intelligence/scalability/: __init__.py
semantic_code_intelligence/search/: formatter.py  grep.py  hybrid_search.py  keyword_search.py  section_expander.py
semantic_code_intelligence/services/: indexing_service.py  search_service.py
semantic_code_intelligence/sessions/: __init__.py
semantic_code_intelligence/storage/: chunk_hash_store.py  hash_store.py  index_manifest.py  index_stats.py  query_history.py  symbol_registry.py  vector_store.py
semantic_code_intelligence/tests/: test_ai_features.py  test_chunker.py  test_cli.py  test_config.py  test_context.py  test_embeddings.py  test_endtoend.py  test_enhanced_embeddings.py  test_hash_store.py  test_logging.py  test_new_cli.py  test_parser.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase13.py  test_phase14.py  test_phase15.py  test_phase16.py  test_phase17.py  test_phase18.py  test_phase19.py  test_phase20.py  test_phase20b.py  test_phase20c.py  test_phase21.py  test_phase22.py  test_phase23.py  test_phase24.py  test_phase25.py  test_phase26.py  test_phase27.py  test_phase38_42.py  test_phase8.py  test_phase9.py  test_plugins.py  test_priority_features.py  test_router.py  test_scalability.py  test_scanner.py  (+5 more)
semantic_code_intelligence/tools/: __init__.py  executor.py  protocol.py
semantic_code_intelligence/tui/: __init__.py
semantic_code_intelligence/utils/: logging.py
semantic_code_intelligence/web/: __init__.py  api.py  server.py  ui.py  visualize.py
semantic_code_intelligence/workspace/: __init__.py
vscode-extension/: LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
