[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-ai"
version = "0.16.0"
description = "Developer intelligence CLI — semantic code search, AI-assisted understanding, and workspace tooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = [
    "code-search",
    "semantic-search",
    "developer-tools",
    "code-intelligence",
    "ai-assistant",
    "cli",
    "tree-sitter",
    "embeddings",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "tree-sitter>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/M9nx/CodexA"
Repository = "https://github.com/M9nx/CodexA"
Issues = "https://github.com/M9nx/CodexA/issues"
Changelog = "https://github.com/M9nx/CodexA/blob/main/CHANGELOG.md"

[project.scripts]
codex = "semantic_code_intelligence.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["semantic_code_intelligence/tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
