[package]
name = "codexa-core"
version = "0.1.0"
edition = "2021"
description = "Rust-native search and indexing engine for CodexA"
license = "MIT"

[lib]
name = "codexa_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1"
blake3 = "1"
walkdir = "2"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
