[package]
name = "codexa-core"
version = "0.1.0"
edition = "2021"
description = "Rust-native search and indexing engine for CodexA"
license = "MIT"

[lib]
name = "codexa_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1"
blake3 = "1"
walkdir = "2"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
ignore = "0.4"
memmap2 = "0.9"
instant-distance = "0.6.1"
tree-sitter = "0.24"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }
ndarray = { version = "0.17.2", optional = true }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]
